examples/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    FRESH
    MATCH
    NULL

Grammar

Rule 0     S' -> top
Rule 1     aterm -> SYMBOL
Rule 2     aterm -> aterm LPAREN terms RPAREN
Rule 3     aterm -> aterm DOT SYMBOL
Rule 4     atype -> SYMBOL
Rule 5     atype -> atype DOT SYMBOL
Rule 6     var -> VARIABLE
Rule 7     var -> VARIABLE COLON atype
Rule 8     simplevar -> VARIABLE
Rule 9     simplevar -> VARIABLE COLON SYMBOL
Rule 10    term -> aterm
Rule 11    term -> OLD aterm
Rule 12    term -> var
Rule 13    term -> term PLUS term
Rule 14    term -> term MINUS term
Rule 15    term -> term TIMES term
Rule 16    term -> term IF fmla ELSE term
Rule 17    terms -> <empty>
Rule 18    terms -> term
Rule 19    terms -> terms COMMA term
Rule 20    term -> LPAREN term RPAREN
Rule 21    vars -> var
Rule 22    vars -> vars COMMA var
Rule 23    simplevars -> simplevar
Rule 24    simplevars -> simplevars COMMA simplevar
Rule 25    app -> SYMBOL
Rule 26    app -> SYMBOL LPAREN terms RPAREN
Rule 27    app -> term infix term
Rule 28    apps -> app
Rule 29    apps -> apps COMMA app
Rule 30    top -> <empty>
Rule 31    atom -> SYMBOL
Rule 32    top -> top USING SYMBOL
Rule 33    atom -> SYMBOL LPAREN terms RPAREN
Rule 34    atoms -> atom
Rule 35    top -> top INCLUDE SYMBOL
Rule 36    atoms -> atoms COMMA atom
Rule 37    labeledfmla -> fmla
Rule 38    lit -> atom
Rule 39    labeledfmla -> LABEL fmla
Rule 40    lit -> SYMBOL EQ SYMBOL
Rule 41    top -> top AXIOM labeledfmla
Rule 42    lit -> SYMBOL TILDAEQ SYMBOL
Rule 43    top -> top PROPERTY labeledfmla
Rule 44    lit -> TILDA lit
Rule 45    relop -> EQ
Rule 46    top -> top CONJECTURE labeledfmla
Rule 47    relop -> LE
Rule 48    relop -> LT
Rule 49    top -> top MODULE atom EQ LCB top RCB
Rule 50    relop -> GE
Rule 51    relop -> GT
Rule 52    top -> top OBJECT SYMBOL EQ LCB top RCB
Rule 53    infix -> PLUS
Rule 54    infix -> MINUS
Rule 55    infix -> TIMES
Rule 56    top -> top MACRO atom EQ LCB action RCB
Rule 57    fmla -> term
Rule 58    top -> top SCHEMA defn
Rule 59    fmla -> term relop term
Rule 60    top -> top INSTANTIATE insts
Rule 61    fmla -> term TILDAEQ term
Rule 62    insts -> inst
Rule 63    fmla -> LPAREN fmla RPAREN
Rule 64    insts -> insts COMMA inst
Rule 65    fmla -> TRUE
Rule 66    pname -> atype
Rule 67    fmla -> FALSE
Rule 68    pname -> var
Rule 69    fmla -> TILDA fmla
Rule 70    pname -> infix
Rule 71    fmla -> fmla AND fmla
Rule 72    pname -> relop
Rule 73    pnames -> <empty>
Rule 74    fmla -> fmla OR fmla
Rule 75    pnames -> pname
Rule 76    pnames -> pnames COMMA pname
Rule 77    modinst -> SYMBOL
Rule 78    fmla -> fmla ARROW fmla
Rule 79    modinst -> SYMBOL LPAREN pnames RPAREN
Rule 80    fmla -> fmla IFF fmla
Rule 81    inst -> modinst
Rule 82    fmla -> FORALL simplevars DOT fmla
Rule 83    inst -> modinst COLON modinst
Rule 84    fmla -> EXISTS simplevars DOT fmla
Rule 85    top -> top symdecl
Rule 86    symdecl -> relationdecl
Rule 87    symdecl -> constantdecl
Rule 88    symdecl -> DESTRUCTOR tterms
Rule 89    constantdecl -> INDIV tterms
Rule 90    relationdecl -> RELATION tatoms
Rule 91    tatoms -> tatom
Rule 92    tatoms -> tatoms COMMA tatom
Rule 93    tatom -> SYMBOL
Rule 94    tatom -> SYMBOL targs
Rule 95    tatom -> LPAREN var relop var RPAREN
Rule 96    top -> top DERIVED defns
Rule 97    top -> top PROGRESS defns
Rule 98    top -> top RELY atom ARROW atom
Rule 99    top -> top MIXORD callatom ARROW callatom
Rule 100   top -> top RELY atom
Rule 101   top -> top CONCEPT cdefns
Rule 102   top -> top INIT labeledfmla
Rule 103   top -> top UPDATE apps FROM apps upaxes
Rule 104   top -> top TYPE SYMBOL
Rule 105   top -> top TYPE SYMBOL EQ sort
Rule 106   tsyms -> var
Rule 107   tsyms -> tsyms COMMA var
Rule 108   targs -> LPAREN RPAREN
Rule 109   targs -> LPAREN tsyms RPAREN
Rule 110   param -> SYMBOL COLON SYMBOL
Rule 111   params -> param
Rule 112   params -> params COMMA param
Rule 113   optargs -> <empty>
Rule 114   optargs -> LPAREN lparams RPAREN
Rule 115   optreturns -> <empty>
Rule 116   optreturns -> RETURNS LPAREN params RPAREN
Rule 117   optactualreturns -> callatoms ASSIGN
Rule 118   tapp -> SYMBOL
Rule 119   tapp -> SYMBOL targs
Rule 120   tapp -> LPAREN var infix var RPAREN
Rule 121   tterm -> tapp
Rule 122   tterm -> tapp COLON atype
Rule 123   tterms -> tterm
Rule 124   tterms -> tterms COMMA tterm
Rule 125   sort -> LCB names RCB
Rule 126   names -> SYMBOL
Rule 127   names -> names COMMA SYMBOL
Rule 128   upaxes -> <empty>
Rule 129   upaxes -> upaxes upax
Rule 130   upax -> PARAMS tterms IN action ARROW requires ensures
Rule 131   requires -> <empty>
Rule 132   requires -> REQUIRES fmla
Rule 133   modifies -> <empty>
Rule 134   modifies -> MODIFIES LCB RCB
Rule 135   modifies -> MODIFIES TIMES
Rule 136   modifies -> MODIFIES atoms
Rule 137   ensures -> ENSURES fmla
Rule 138   optaction -> <empty>
Rule 139   optaction -> action
Rule 140   optactiondef -> <empty>
Rule 141   optactiondef -> EQ LCB optaction RCB
Rule 142   top -> top ACTION SYMBOL optargs optreturns optactiondef
Rule 143   top -> top MIXIN callatom BEFORE callatom
Rule 144   top -> top MIXIN callatom AFTER callatom
Rule 145   top -> top BEFORE atype optargs optreturns LCB action RCB
Rule 146   top -> top AFTER atype optargs optreturns LCB action RCB
Rule 147   top -> top IMPLEMENT atype optargs optreturns LCB action RCB
Rule 148   top -> top ISOLATE callatom EQ callatoms
Rule 149   top -> top ISOLATE callatom EQ callatoms WITH callatoms
Rule 150   top -> top EXTRACT callatom EQ callatoms
Rule 151   top -> top EXPORT callatom
Rule 152   top -> top IMPORT callatom
Rule 153   top -> top PRIVATE callatom
Rule 154   optdelegee -> <empty>
Rule 155   optdelegee -> ARROW callatom
Rule 156   top -> top DELEGATE callatoms optdelegee
Rule 157   top -> top STATE SYMBOL EQ state_expr
Rule 158   assert_rhs -> LCB requires modifies ensures RCB
Rule 159   assert_rhs -> fmla
Rule 160   top -> top ASSERT SYMBOL ARROW assert_rhs
Rule 161   oper -> atype
Rule 162   oper -> relop
Rule 163   oper -> infix
Rule 164   top -> top INTERPRET oper ARROW oper
Rule 165   top -> top INTERPRET oper ARROW LCB SYMBOL DOTS SYMBOL RCB
Rule 166   loc -> <empty>
Rule 167   loc -> SYMBOL
Rule 168   action -> LCB RCB
Rule 169   action -> LCB action RCB
Rule 170   action -> ASSUME fmla
Rule 171   action -> ASSERT fmla
Rule 172   action -> ENSURES fmla
Rule 173   action -> SET lit
Rule 174   action -> term ASSIGN fmla
Rule 175   termtuple -> LPAREN term COMMA terms RPAREN
Rule 176   action -> termtuple ASSIGN callatom
Rule 177   action -> term ASSIGN TIMES
Rule 178   somefmla -> fmla
Rule 179   somefmla -> SOME params DOT fmla
Rule 180   somefmla -> SOME params DOT fmla MINIMIZING term
Rule 181   somefmla -> SOME params DOT fmla MAXIMIZING term
Rule 182   action -> IF somefmla LCB action RCB
Rule 183   action -> IF somefmla LCB action RCB ELSE action
Rule 184   action -> INSTANTIATE callatom
Rule 185   callatom -> atom
Rule 186   callatom -> callatom DOT callatom
Rule 187   callatoms -> callatom
Rule 188   callatoms -> callatoms COMMA callatom
Rule 189   action -> CALL callatom
Rule 190   action -> CALL callatom ASSIGN callatom
Rule 191   action -> action SEMI action
Rule 192   lparam -> SYMBOL COLON atype
Rule 193   lparams -> lparam
Rule 194   lparams -> lparams COMMA lparam
Rule 195   action -> LOCAL lparams LCB action RCB
Rule 196   eqn -> SYMBOL EQ SYMBOL
Rule 197   eqns -> eqn
Rule 198   eqns -> eqns COMMA eqn
Rule 199   action -> LET eqns LCB action RCB
Rule 200   symbols -> SYMBOL
Rule 201   symbols -> symbols COMMA SYMBOL
Rule 202   cdefns -> cdefn
Rule 203   cdefns -> cdefns COMMA cdefn
Rule 204   cdefn -> atom EQ expr
Rule 205   defns -> defn
Rule 206   defns -> defns COMMA defn
Rule 207   defn -> atom EQ fmla
Rule 208   expr -> LCB fmla RCB
Rule 209   exprterm -> aterm
Rule 210   exprterm -> var
Rule 211   expr -> exprterm
Rule 212   expr -> exprterm relop exprterm
Rule 213   expr -> exprterm TILDAEQ exprterm
Rule 214   expr -> TILDA expr
Rule 215   expr -> LPAREN expr RPAREN
Rule 216   expr -> prod
Rule 217   expr -> sum
Rule 218   prod -> expr TIMES expr
Rule 219   prod -> prod TIMES expr
Rule 220   sum -> expr PLUS expr
Rule 221   sum -> sum PLUS expr
Rule 222   state_expr -> TRUE
Rule 223   state_expr -> FALSE
Rule 224   state_expr -> SYMBOL
Rule 225   state_expr -> SYMBOL LPAREN state_expr RPAREN
Rule 226   state_expr -> state_expr OR state_expr
Rule 227   state_expr -> LCB requires modifies ensures RCB
Rule 228   state_expr -> ENTRY

Terminals, with rules where they appear

ACTION               : 142
AFTER                : 144 146
AND                  : 71
ARROW                : 78 98 99 130 155 160 164 165
ASSERT               : 160 171
ASSIGN               : 117 174 176 177 190
ASSUME               : 170
AXIOM                : 41
BEFORE               : 143 145
CALL                 : 189 190
COLON                : 7 9 83 110 122 192
COMMA                : 19 22 24 29 36 64 76 92 107 112 124 127 175 188 194 198 201 203 206
CONCEPT              : 101
CONJECTURE           : 46
DELEGATE             : 156
DERIVED              : 96
DESTRUCTOR           : 88
DOT                  : 3 5 82 84 179 180 181 186
DOTS                 : 165
ELSE                 : 16 183
ENSURES              : 137 172
ENTRY                : 228
EQ                   : 40 45 49 52 56 105 141 148 149 150 157 196 204 207
EXISTS               : 84
EXPORT               : 151
EXTRACT              : 150
FALSE                : 67 223
FORALL               : 82
FRESH                : 
FROM                 : 103
GE                   : 50
GT                   : 51
IF                   : 16 182 183
IFF                  : 80
IMPLEMENT            : 147
IMPORT               : 152
IN                   : 130
INCLUDE              : 35
INDIV                : 89
INIT                 : 102
INSTANTIATE          : 60 184
INTERPRET            : 164 165
ISOLATE              : 148 149
LABEL                : 39
LCB                  : 49 52 56 125 134 141 145 146 147 158 165 168 169 182 183 195 199 208 227
LE                   : 47
LET                  : 199
LOCAL                : 195
LPAREN               : 2 20 26 33 63 79 95 108 109 114 116 120 175 215 225
LT                   : 48
MACRO                : 56
MATCH                : 
MAXIMIZING           : 181
MINIMIZING           : 180
MINUS                : 14 54
MIXIN                : 143 144
MIXORD               : 99
MODIFIES             : 134 135 136
MODULE               : 49
NULL                 : 
OBJECT               : 52
OLD                  : 11
OR                   : 74 226
PARAMS               : 130
PLUS                 : 13 53 220 221
PRIVATE              : 153
PROGRESS             : 97
PROPERTY             : 43
RCB                  : 49 52 56 125 134 141 145 146 147 158 165 168 169 182 183 195 199 208 227
RELATION             : 90
RELY                 : 98 100
REQUIRES             : 132
RETURNS              : 116
RPAREN               : 2 20 26 33 63 79 95 108 109 114 116 120 175 215 225
SCHEMA               : 58
SEMI                 : 191
SET                  : 173
SOME                 : 179 180 181
STATE                : 157
SYMBOL               : 1 3 4 5 9 25 26 31 32 33 35 40 40 42 42 52 77 79 93 94 104 105 110 110 118 119 126 127 142 157 160 165 165 167 192 196 196 200 201 224 225
TILDA                : 44 69 214
TILDAEQ              : 42 61 213
TIMES                : 15 55 135 177 218 219
TRUE                 : 65 222
TYPE                 : 104 105
UPDATE               : 103
USING                : 32
VARIABLE             : 6 7 8 9
WITH                 : 149
error                : 

Nonterminals, with rules where they appear

action               : 56 130 139 145 146 147 169 182 183 183 191 191 195 199
app                  : 28 29
apps                 : 29 103 103
assert_rhs           : 160
aterm                : 2 3 10 11 209
atom                 : 34 36 38 49 56 98 98 100 185 204 207
atoms                : 36 136
atype                : 5 7 66 122 145 146 147 161 192
callatom             : 99 99 143 143 144 144 148 149 150 151 152 153 155 176 184 186 186 187 188 189 190 190
callatoms            : 117 148 149 149 150 156 188
cdefn                : 202 203
cdefns               : 101 203
constantdecl         : 87
defn                 : 58 205 206
defns                : 96 97 206
ensures              : 130 158 227
eqn                  : 197 198
eqns                 : 198 199
expr                 : 204 214 215 218 218 219 220 220 221
exprterm             : 211 212 212 213 213
fmla                 : 16 37 39 63 69 71 71 74 74 78 78 80 80 82 84 132 137 159 170 171 172 174 178 179 180 181 207 208
infix                : 27 70 120 163
inst                 : 62 64
insts                : 60 64
labeledfmla          : 41 43 46 102
lit                  : 44 173
loc                  : 
lparam               : 193 194
lparams              : 114 194 195
modifies             : 158 227
modinst              : 81 83 83
names                : 125 127
oper                 : 164 164 165
optaction            : 141
optactiondef         : 142
optactualreturns     : 
optargs              : 142 145 146 147
optdelegee           : 156
optreturns           : 142 145 146 147
param                : 111 112
params               : 112 116 179 180 181
pname                : 75 76
pnames               : 76 79
prod                 : 216 219
relationdecl         : 86
relop                : 59 72 95 162 212
requires             : 130 158 227
simplevar            : 23 24
simplevars           : 24 82 84
somefmla             : 182 183
sort                 : 105
state_expr           : 157 225 226 226
sum                  : 217 221
symbols              : 201
symdecl              : 85
tapp                 : 121 122
targs                : 94 119
tatom                : 91 92
tatoms               : 90 92
term                 : 13 13 14 14 15 15 16 16 18 19 20 27 27 57 59 59 61 61 174 175 177 180 181
terms                : 2 19 26 33 175
termtuple            : 176
top                  : 32 35 41 43 46 49 49 52 52 56 58 60 85 96 97 98 99 100 101 102 103 104 105 142 143 144 145 146 147 148 149 150 151 152 153 156 157 160 164 165 0
tsyms                : 107 109
tterm                : 123 124
tterms               : 88 89 124 130
upax                 : 129
upaxes               : 103 129
var                  : 12 21 22 68 95 95 106 107 120 120 210
vars                 : 22

Parsing method: LALR

state 0

    (0) S' -> . top
    (30) top -> .
    (32) top -> . top USING SYMBOL
    (35) top -> . top INCLUDE SYMBOL
    (41) top -> . top AXIOM labeledfmla
    (43) top -> . top PROPERTY labeledfmla
    (46) top -> . top CONJECTURE labeledfmla
    (49) top -> . top MODULE atom EQ LCB top RCB
    (52) top -> . top OBJECT SYMBOL EQ LCB top RCB
    (56) top -> . top MACRO atom EQ LCB action RCB
    (58) top -> . top SCHEMA defn
    (60) top -> . top INSTANTIATE insts
    (85) top -> . top symdecl
    (96) top -> . top DERIVED defns
    (97) top -> . top PROGRESS defns
    (98) top -> . top RELY atom ARROW atom
    (99) top -> . top MIXORD callatom ARROW callatom
    (100) top -> . top RELY atom
    (101) top -> . top CONCEPT cdefns
    (102) top -> . top INIT labeledfmla
    (103) top -> . top UPDATE apps FROM apps upaxes
    (104) top -> . top TYPE SYMBOL
    (105) top -> . top TYPE SYMBOL EQ sort
    (142) top -> . top ACTION SYMBOL optargs optreturns optactiondef
    (143) top -> . top MIXIN callatom BEFORE callatom
    (144) top -> . top MIXIN callatom AFTER callatom
    (145) top -> . top BEFORE atype optargs optreturns LCB action RCB
    (146) top -> . top AFTER atype optargs optreturns LCB action RCB
    (147) top -> . top IMPLEMENT atype optargs optreturns LCB action RCB
    (148) top -> . top ISOLATE callatom EQ callatoms
    (149) top -> . top ISOLATE callatom EQ callatoms WITH callatoms
    (150) top -> . top EXTRACT callatom EQ callatoms
    (151) top -> . top EXPORT callatom
    (152) top -> . top IMPORT callatom
    (153) top -> . top PRIVATE callatom
    (156) top -> . top DELEGATE callatoms optdelegee
    (157) top -> . top STATE SYMBOL EQ state_expr
    (160) top -> . top ASSERT SYMBOL ARROW assert_rhs
    (164) top -> . top INTERPRET oper ARROW oper
    (165) top -> . top INTERPRET oper ARROW LCB SYMBOL DOTS SYMBOL RCB

    USING           reduce using rule 30 (top -> .)
    INCLUDE         reduce using rule 30 (top -> .)
    AXIOM           reduce using rule 30 (top -> .)
    PROPERTY        reduce using rule 30 (top -> .)
    CONJECTURE      reduce using rule 30 (top -> .)
    MODULE          reduce using rule 30 (top -> .)
    OBJECT          reduce using rule 30 (top -> .)
    MACRO           reduce using rule 30 (top -> .)
    SCHEMA          reduce using rule 30 (top -> .)
    INSTANTIATE     reduce using rule 30 (top -> .)
    DERIVED         reduce using rule 30 (top -> .)
    PROGRESS        reduce using rule 30 (top -> .)
    RELY            reduce using rule 30 (top -> .)
    MIXORD          reduce using rule 30 (top -> .)
    CONCEPT         reduce using rule 30 (top -> .)
    INIT            reduce using rule 30 (top -> .)
    UPDATE          reduce using rule 30 (top -> .)
    TYPE            reduce using rule 30 (top -> .)
    ACTION          reduce using rule 30 (top -> .)
    MIXIN           reduce using rule 30 (top -> .)
    BEFORE          reduce using rule 30 (top -> .)
    AFTER           reduce using rule 30 (top -> .)
    IMPLEMENT       reduce using rule 30 (top -> .)
    ISOLATE         reduce using rule 30 (top -> .)
    EXTRACT         reduce using rule 30 (top -> .)
    EXPORT          reduce using rule 30 (top -> .)
    IMPORT          reduce using rule 30 (top -> .)
    PRIVATE         reduce using rule 30 (top -> .)
    DELEGATE        reduce using rule 30 (top -> .)
    STATE           reduce using rule 30 (top -> .)
    ASSERT          reduce using rule 30 (top -> .)
    INTERPRET       reduce using rule 30 (top -> .)
    DESTRUCTOR      reduce using rule 30 (top -> .)
    RELATION        reduce using rule 30 (top -> .)
    INDIV           reduce using rule 30 (top -> .)
    $end            reduce using rule 30 (top -> .)

    top                            shift and go to state 1

state 1

    (0) S' -> top .
    (32) top -> top . USING SYMBOL
    (35) top -> top . INCLUDE SYMBOL
    (41) top -> top . AXIOM labeledfmla
    (43) top -> top . PROPERTY labeledfmla
    (46) top -> top . CONJECTURE labeledfmla
    (49) top -> top . MODULE atom EQ LCB top RCB
    (52) top -> top . OBJECT SYMBOL EQ LCB top RCB
    (56) top -> top . MACRO atom EQ LCB action RCB
    (58) top -> top . SCHEMA defn
    (60) top -> top . INSTANTIATE insts
    (85) top -> top . symdecl
    (96) top -> top . DERIVED defns
    (97) top -> top . PROGRESS defns
    (98) top -> top . RELY atom ARROW atom
    (99) top -> top . MIXORD callatom ARROW callatom
    (100) top -> top . RELY atom
    (101) top -> top . CONCEPT cdefns
    (102) top -> top . INIT labeledfmla
    (103) top -> top . UPDATE apps FROM apps upaxes
    (104) top -> top . TYPE SYMBOL
    (105) top -> top . TYPE SYMBOL EQ sort
    (142) top -> top . ACTION SYMBOL optargs optreturns optactiondef
    (143) top -> top . MIXIN callatom BEFORE callatom
    (144) top -> top . MIXIN callatom AFTER callatom
    (145) top -> top . BEFORE atype optargs optreturns LCB action RCB
    (146) top -> top . AFTER atype optargs optreturns LCB action RCB
    (147) top -> top . IMPLEMENT atype optargs optreturns LCB action RCB
    (148) top -> top . ISOLATE callatom EQ callatoms
    (149) top -> top . ISOLATE callatom EQ callatoms WITH callatoms
    (150) top -> top . EXTRACT callatom EQ callatoms
    (151) top -> top . EXPORT callatom
    (152) top -> top . IMPORT callatom
    (153) top -> top . PRIVATE callatom
    (156) top -> top . DELEGATE callatoms optdelegee
    (157) top -> top . STATE SYMBOL EQ state_expr
    (160) top -> top . ASSERT SYMBOL ARROW assert_rhs
    (164) top -> top . INTERPRET oper ARROW oper
    (165) top -> top . INTERPRET oper ARROW LCB SYMBOL DOTS SYMBOL RCB
    (86) symdecl -> . relationdecl
    (87) symdecl -> . constantdecl
    (88) symdecl -> . DESTRUCTOR tterms
    (90) relationdecl -> . RELATION tatoms
    (89) constantdecl -> . INDIV tterms

    USING           shift and go to state 36
    INCLUDE         shift and go to state 25
    AXIOM           shift and go to state 7
    PROPERTY        shift and go to state 37
    CONJECTURE      shift and go to state 2
    MODULE          shift and go to state 22
    OBJECT          shift and go to state 17
    MACRO           shift and go to state 19
    SCHEMA          shift and go to state 16
    INSTANTIATE     shift and go to state 4
    DERIVED         shift and go to state 9
    PROGRESS        shift and go to state 18
    RELY            shift and go to state 8
    MIXORD          shift and go to state 30
    CONCEPT         shift and go to state 29
    INIT            shift and go to state 11
    UPDATE          shift and go to state 21
    TYPE            shift and go to state 38
    ACTION          shift and go to state 13
    MIXIN           shift and go to state 35
    BEFORE          shift and go to state 27
    AFTER           shift and go to state 31
    IMPLEMENT       shift and go to state 24
    ISOLATE         shift and go to state 20
    EXTRACT         shift and go to state 15
    EXPORT          shift and go to state 6
    IMPORT          shift and go to state 14
    PRIVATE         shift and go to state 10
    DELEGATE        shift and go to state 34
    STATE           shift and go to state 32
    ASSERT          shift and go to state 5
    INTERPRET       shift and go to state 39
    DESTRUCTOR      shift and go to state 33
    RELATION        shift and go to state 23
    INDIV           shift and go to state 28

    constantdecl                   shift and go to state 3
    relationdecl                   shift and go to state 12
    symdecl                        shift and go to state 26

state 2

    (46) top -> top CONJECTURE . labeledfmla
    (37) labeledfmla -> . fmla
    (39) labeledfmla -> . LABEL fmla
    (57) fmla -> . term
    (59) fmla -> . term relop term
    (61) fmla -> . term TILDAEQ term
    (63) fmla -> . LPAREN fmla RPAREN
    (65) fmla -> . TRUE
    (67) fmla -> . FALSE
    (69) fmla -> . TILDA fmla
    (71) fmla -> . fmla AND fmla
    (74) fmla -> . fmla OR fmla
    (78) fmla -> . fmla ARROW fmla
    (80) fmla -> . fmla IFF fmla
    (82) fmla -> . FORALL simplevars DOT fmla
    (84) fmla -> . EXISTS simplevars DOT fmla
    (10) term -> . aterm
    (11) term -> . OLD aterm
    (12) term -> . var
    (13) term -> . term PLUS term
    (14) term -> . term MINUS term
    (15) term -> . term TIMES term
    (16) term -> . term IF fmla ELSE term
    (20) term -> . LPAREN term RPAREN
    (1) aterm -> . SYMBOL
    (2) aterm -> . aterm LPAREN terms RPAREN
    (3) aterm -> . aterm DOT SYMBOL
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    LABEL           shift and go to state 42
    LPAREN          shift and go to state 40
    TRUE            shift and go to state 43
    FALSE           shift and go to state 54
    TILDA           shift and go to state 44
    FORALL          shift and go to state 47
    EXISTS          shift and go to state 48
    OLD             shift and go to state 52
    SYMBOL          shift and go to state 41
    VARIABLE        shift and go to state 51

    term                           shift and go to state 53
    labeledfmla                    shift and go to state 49
    aterm                          shift and go to state 45
    fmla                           shift and go to state 46
    var                            shift and go to state 50

state 3

    (87) symdecl -> constantdecl .

    USING           reduce using rule 87 (symdecl -> constantdecl .)
    INCLUDE         reduce using rule 87 (symdecl -> constantdecl .)
    AXIOM           reduce using rule 87 (symdecl -> constantdecl .)
    PROPERTY        reduce using rule 87 (symdecl -> constantdecl .)
    CONJECTURE      reduce using rule 87 (symdecl -> constantdecl .)
    MODULE          reduce using rule 87 (symdecl -> constantdecl .)
    OBJECT          reduce using rule 87 (symdecl -> constantdecl .)
    MACRO           reduce using rule 87 (symdecl -> constantdecl .)
    SCHEMA          reduce using rule 87 (symdecl -> constantdecl .)
    INSTANTIATE     reduce using rule 87 (symdecl -> constantdecl .)
    DERIVED         reduce using rule 87 (symdecl -> constantdecl .)
    PROGRESS        reduce using rule 87 (symdecl -> constantdecl .)
    RELY            reduce using rule 87 (symdecl -> constantdecl .)
    MIXORD          reduce using rule 87 (symdecl -> constantdecl .)
    CONCEPT         reduce using rule 87 (symdecl -> constantdecl .)
    INIT            reduce using rule 87 (symdecl -> constantdecl .)
    UPDATE          reduce using rule 87 (symdecl -> constantdecl .)
    TYPE            reduce using rule 87 (symdecl -> constantdecl .)
    ACTION          reduce using rule 87 (symdecl -> constantdecl .)
    MIXIN           reduce using rule 87 (symdecl -> constantdecl .)
    BEFORE          reduce using rule 87 (symdecl -> constantdecl .)
    AFTER           reduce using rule 87 (symdecl -> constantdecl .)
    IMPLEMENT       reduce using rule 87 (symdecl -> constantdecl .)
    ISOLATE         reduce using rule 87 (symdecl -> constantdecl .)
    EXTRACT         reduce using rule 87 (symdecl -> constantdecl .)
    EXPORT          reduce using rule 87 (symdecl -> constantdecl .)
    IMPORT          reduce using rule 87 (symdecl -> constantdecl .)
    PRIVATE         reduce using rule 87 (symdecl -> constantdecl .)
    DELEGATE        reduce using rule 87 (symdecl -> constantdecl .)
    STATE           reduce using rule 87 (symdecl -> constantdecl .)
    ASSERT          reduce using rule 87 (symdecl -> constantdecl .)
    INTERPRET       reduce using rule 87 (symdecl -> constantdecl .)
    DESTRUCTOR      reduce using rule 87 (symdecl -> constantdecl .)
    RELATION        reduce using rule 87 (symdecl -> constantdecl .)
    INDIV           reduce using rule 87 (symdecl -> constantdecl .)
    $end            reduce using rule 87 (symdecl -> constantdecl .)
    RCB             reduce using rule 87 (symdecl -> constantdecl .)


state 4

    (60) top -> top INSTANTIATE . insts
    (62) insts -> . inst
    (64) insts -> . insts COMMA inst
    (81) inst -> . modinst
    (83) inst -> . modinst COLON modinst
    (77) modinst -> . SYMBOL
    (79) modinst -> . SYMBOL LPAREN pnames RPAREN

    SYMBOL          shift and go to state 58

    modinst                        shift and go to state 57
    inst                           shift and go to state 56
    insts                          shift and go to state 55

state 5

    (160) top -> top ASSERT . SYMBOL ARROW assert_rhs

    SYMBOL          shift and go to state 59


state 6

    (151) top -> top EXPORT . callatom
    (185) callatom -> . atom
    (186) callatom -> . callatom DOT callatom
    (31) atom -> . SYMBOL
    (33) atom -> . SYMBOL LPAREN terms RPAREN

    SYMBOL          shift and go to state 62

    callatom                       shift and go to state 60
    atom                           shift and go to state 61

state 7

    (41) top -> top AXIOM . labeledfmla
    (37) labeledfmla -> . fmla
    (39) labeledfmla -> . LABEL fmla
    (57) fmla -> . term
    (59) fmla -> . term relop term
    (61) fmla -> . term TILDAEQ term
    (63) fmla -> . LPAREN fmla RPAREN
    (65) fmla -> . TRUE
    (67) fmla -> . FALSE
    (69) fmla -> . TILDA fmla
    (71) fmla -> . fmla AND fmla
    (74) fmla -> . fmla OR fmla
    (78) fmla -> . fmla ARROW fmla
    (80) fmla -> . fmla IFF fmla
    (82) fmla -> . FORALL simplevars DOT fmla
    (84) fmla -> . EXISTS simplevars DOT fmla
    (10) term -> . aterm
    (11) term -> . OLD aterm
    (12) term -> . var
    (13) term -> . term PLUS term
    (14) term -> . term MINUS term
    (15) term -> . term TIMES term
    (16) term -> . term IF fmla ELSE term
    (20) term -> . LPAREN term RPAREN
    (1) aterm -> . SYMBOL
    (2) aterm -> . aterm LPAREN terms RPAREN
    (3) aterm -> . aterm DOT SYMBOL
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    LABEL           shift and go to state 42
    LPAREN          shift and go to state 40
    TRUE            shift and go to state 43
    FALSE           shift and go to state 54
    TILDA           shift and go to state 44
    FORALL          shift and go to state 47
    EXISTS          shift and go to state 48
    OLD             shift and go to state 52
    SYMBOL          shift and go to state 41
    VARIABLE        shift and go to state 51

    term                           shift and go to state 53
    labeledfmla                    shift and go to state 63
    aterm                          shift and go to state 45
    fmla                           shift and go to state 46
    var                            shift and go to state 50

state 8

    (98) top -> top RELY . atom ARROW atom
    (100) top -> top RELY . atom
    (31) atom -> . SYMBOL
    (33) atom -> . SYMBOL LPAREN terms RPAREN

    SYMBOL          shift and go to state 62

    atom                           shift and go to state 64

state 9

    (96) top -> top DERIVED . defns
    (205) defns -> . defn
    (206) defns -> . defns COMMA defn
    (207) defn -> . atom EQ fmla
    (31) atom -> . SYMBOL
    (33) atom -> . SYMBOL LPAREN terms RPAREN

    SYMBOL          shift and go to state 62

    defn                           shift and go to state 65
    atom                           shift and go to state 66
    defns                          shift and go to state 67

state 10

    (153) top -> top PRIVATE . callatom
    (185) callatom -> . atom
    (186) callatom -> . callatom DOT callatom
    (31) atom -> . SYMBOL
    (33) atom -> . SYMBOL LPAREN terms RPAREN

    SYMBOL          shift and go to state 62

    callatom                       shift and go to state 68
    atom                           shift and go to state 61

state 11

    (102) top -> top INIT . labeledfmla
    (37) labeledfmla -> . fmla
    (39) labeledfmla -> . LABEL fmla
    (57) fmla -> . term
    (59) fmla -> . term relop term
    (61) fmla -> . term TILDAEQ term
    (63) fmla -> . LPAREN fmla RPAREN
    (65) fmla -> . TRUE
    (67) fmla -> . FALSE
    (69) fmla -> . TILDA fmla
    (71) fmla -> . fmla AND fmla
    (74) fmla -> . fmla OR fmla
    (78) fmla -> . fmla ARROW fmla
    (80) fmla -> . fmla IFF fmla
    (82) fmla -> . FORALL simplevars DOT fmla
    (84) fmla -> . EXISTS simplevars DOT fmla
    (10) term -> . aterm
    (11) term -> . OLD aterm
    (12) term -> . var
    (13) term -> . term PLUS term
    (14) term -> . term MINUS term
    (15) term -> . term TIMES term
    (16) term -> . term IF fmla ELSE term
    (20) term -> . LPAREN term RPAREN
    (1) aterm -> . SYMBOL
    (2) aterm -> . aterm LPAREN terms RPAREN
    (3) aterm -> . aterm DOT SYMBOL
    (6) var -> . VARIABLE
    (7) var -> . VARIABLE COLON atype

    LABEL           shift and go to state 42
    LPAREN          shift and go to state 40
    TRUE            shift and go to state 43
    FALSE           shift and go to state 54
    TILDA           shift and go to state 44
    FORALL          shift and go to state 47
    EXISTS          shift and go to state 48
    OLD             shift and go to state 52
    SYMBOL          shift and go to state 41
    VARIABLE        shift and go to state 51

    term                           shift and go to state 53
    labeledfmla                    shift and go to state 69
    aterm                          shift and go to state 45
    fmla                           shift and go to state 46
    var                            shift and go to state 50

state 12

    (86) symdecl -> relationdecl .
